<resources>
    <string name="app_name">ReminderApp</string>
    <string name="action_settings">Settings</string>
    <string name="dialog_message">Message</string>
    <string name="dialog_time">Alarm time</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_alarm">Alarm</string>
    <string name="ovf_men_delete">Delete</string>
    <string name="title_activity_alarm">AlarmActivity</string>
    <string name="stop">Stop</string>
    <string name="button">Choose alarm tone</string>
</resources>
