<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <EditText
        android:id="@+id/messageEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="22dp"
        android:ems="15"
        android:hint="@string/dialog_message"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/timeEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/messageEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="13dp"
        android:ems="15"
        android:hint="@string/dialog_time"
        android:inputType="time" />

    <Button
        android:id="@+id/cancel_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_cancel"
        android:textColor="@color/colorPrimaryDark"
        android:layout_below="@+id/checkBox"
        android:layout_alignLeft="@+id/timeEditText"
        android:layout_alignStart="@+id/timeEditText"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/ok_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/timeEditText"
        android:layout_alignRight="@+id/timeEditText"
        android:layout_alignTop="@+id/cancel_button"
        android:text="@string/dialog_ok"
        android:textColor="@color/colorPrimaryDark" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/timeEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/dialog_alarm" />

</RelativeLayout>